modified:   index.html 	modified:   it_courses.html 	modified:   it_services.html

--- a/it_courses.html
+++ b/it_courses.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>it_courses</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1143982098584318"
+     crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css_file.css">
 </head>
 
@@ -31,7 +33,7 @@
 
 
 <form id="tabs">
-    <a id="tab" href="home.html">HOME</a>
+    <a id="tab" href="index.html">HOME</a>
     <a id="tab" href="it_services.html">IT SERVICES</a>
     <a id="tab" href="it_courses.html">IT COURSES</a>
     
