--- a/it_services.html
+++ b/it_services.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>it_services</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1143982098584318"
+     crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css_file.css">
 </head>
 
