--- a/it_services.html
+++ b/it_services.html
@@ -6,6 +6,15 @@
     <title>it_services</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1143982098584318"
      crossorigin="anonymous"></script>
+     <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QM1NGM7NTR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QM1NGM7NTR');
+</script>
     <link rel="stylesheet" href="css_file.css">
 </head>
 
